# cli-template

./: AGENTS.md  LANGUAGES.md  README.md  generate.sh
languages/go/: manifest.json
languages/go/overlays/: .gitignore
languages/python/: manifest.json  pyproject.toml
languages/python/overlays/: .gitignore  Makefile
languages/python/overlays/.github/workflows/: ci.yml  release.yml
languages/python/project/src/__PROJECT_NAME__/: __init__.py  cli.py  config.py  executor.py
languages/python/project/tests/: conftest.py  test_cli.py  test_config.py  test_executor.py
languages/rust/: Cargo.toml  manifest.json
languages/rust/overlays/: .gitignore  Makefile
languages/rust/overlays/.github/workflows/: ci.yml  release.yml
languages/rust/project/src/: config.rs  exec.rs  main.rs
languages/rust/project/src/cmd/: mod.rs  root.rs
languages/rust/project/tests/: cli_test.rs
languages/typescript/: manifest.json  package.json
languages/typescript/overlays/: .gitignore  Makefile
languages/typescript/overlays/.github/workflows/: ci.yml  release.yml
languages/typescript/project/src/: cli.ts  config.ts  executor.ts  index.ts
languages/typescript/project/tests/: cli.test.ts  config.test.ts  executor.test.ts
shared/: .gitignore.common
shared/website/: package.json
templates/: README.md.tmpl  SPEC.md.tmpl  TEMPLATE.md.tmpl
